# docker-merge

./: README.md  docker-merge.cabal
Dockerfiles/haskell/: Dockerfile
Dockerfiles/ruby/: Dockerfile
app/: Main.hs
