name:                docker-merge
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matsubara0507/docker-merge#readme
license:             MIT
license-file:        LICENSE
author:              MATSUBARA Nobutada
copyright:           2017 MATSUBARA Nobutada
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable docker-merge
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matsubara0507/docker-merge
